feat: added CRUD for playlist and fixed artist routes
